# python_code

./: .gitignore  README.md  python.xmind  尚硅谷大模型技术之 Python（V3.0).md  环境.md
imooc-mas/mas-study/: 10-4 browser-use本地操控实例.py  10-4 browser-use远程操控实例.py  10-6 使用Playwright简化CDP连接.py  3_10_使用流式输出提升响应速度.py  3_11_DeepSeek语音播报助手.py  3_3_DeepSeek API流式调用.py  3_3_DeepSeek API调用.py  3_5_Kimi多模态API测试.py  3_6_OpenAI SDK重构代码.py  3_6_OpenAI SDK重构多模态LLM调用.py  3_7_为ReAct Agent添加计算工具.py  3_8_Pydantic结合Tool Calls实现数据提取.py  3_8_Pydantic解析数据.py  3_9_DeepSeek JSON Output示例.py  4_2_计算消息上下文长度.py  4_3_ReAct Agent为LLM添加CoT.py  4_4_ReAct+CoT实现企业业务表单填写.py  4_5_同步咖啡店.py  4_5_异步咖啡店.py  4_6_FastAPI-Demo.py  4_6_FastAPI-Docs.py  6_10_mcp-external-api.py  6_11_mcp-client-connect-api.py  6_5_无MCP SDK调用高德MCP.py  6_6_mcp-server-demo.py  6_7_ReAct-Agent-with-mcp.py  6_7_mcp-client-demo.py  6_7_mcp-client-with-exit-stack.py  6_8_mcp-bash.py  6_9_mcp-code.py  README.md  pyproject.toml
imooc-mas/mooc-manus/api/: README.md  alembic.ini  config.example.yaml  config.yaml  pyproject.toml
imooc-mas/mooc-manus/api/alembic/: env.py
imooc-mas/mooc-manus/api/app/: __init__.py  main.py
imooc-mas/mooc-manus/api/app/application/errors/: exceptions.py
imooc-mas/mooc-manus/api/app/application/services/: __init__.py  app_config_service.py  status_service.py
imooc-mas/mooc-manus/api/app/domain/models/: __init__.py  app_config.py  event.py  file.py  health_status.py  memory.py  message.py  plan.py  search.py  tool_result.py
imooc-mas/mooc-manus/api/app/domain/repositories/: __init__.py  app_config_repository.py  uow.py
imooc-mas/mooc-manus/api/app/domain/services/: __init__.py
imooc-mas/mooc-manus/api/app/infrastructure/: __init__.py
imooc-mas/mooc-manus/api/app/infrastructure/logging/: __init__.py  logging.py
imooc-mas/mooc-manus/api/app/infrastructure/models/: __init__.py  base.py
imooc-mas/mooc-manus/api/app/infrastructure/repositories/: __init__.py  file_app_config_repository.py
imooc-mas/mooc-manus/api/app/infrastructure/storage/: cos.py  postgres.py  redis.py
imooc-mas/mooc-manus/api/app/interfaces/: __init__.py  dependencies.py  service_dependencies.py
imooc-mas/mooc-manus/api/app/interfaces/endpoints/: __init__.py  app_config_routes.py  routes.py  status_routers.py
imooc-mas/mooc-manus/api/app/interfaces/errors/: __init__.py  exception_handlers.py
imooc-mas/mooc-manus/api/app/interfaces/schemas/: __init__.py  app_config.py  base.py
imooc-mas/mooc-manus/api/core/: config.py
imooc-mas/mooc-manus/api/tests/: __init__.py  conftest.py
imooc-mas/mooc-manus/api/tests/app/: __init__.py
part1/: init_import.py  keyword.py  main.py  (+4 more)
(+85 files in other folders)
