[project]
name = "mas-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "browser-use>=0.11.13",
    "browser-use-sdk>=3.6.0",
    "fastapi[standard]>=0.136.1",
    "jinja2>=3.1.6",
    "keyboard>=0.13.5",
    "mcp>=1.27.0",
    "numpy>=2.4.4",
    "openai>=2.33.0",
    "playwright>=1.59.0",
    "pydantic[email]>=2.13.3",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "sounddevice>=0.5.5",
    "soundfile>=0.13.1",
    "transformers>=5.7.0",
    "uvicorn[standard]>=0.46.0",
]
