[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "cos-python-sdk-v5>=1.9.42",
    "fastapi>=0.136.1",
    "filelock>=3.29.0",
    "httpx>=0.28.1",
    "json-repair>=0.59.5",
    "openai>=2.33.0",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "pytest>=9.0.3",
    "redis>=7.4.0",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.46.0",
]
